# SPU_CSC3220_W24_T6

./: Notes_900405198.md  Notes_900417075.md  README.md
Design/: Application Programing.sql  Moodboard Statement and Keywords
WorkoutApp/: BenchPress.qml  CMakeLists.txt  Database.js  Deadlift.qml  Header.qml  Main.qml  MyModel.qml  MyModelSquat.qml  Squat.qml  main.cpp
WorkoutApp/WorkoutApp/: BenchPress.qml  Database.js  Main.qml  MyDelegate.qml  MyModelBench.qml  MyModelDeadlift.qml  Squat.qml
